--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,17 @@
 <%= image_tag "", size: "273x48", alt: "" %>
 
+<% if current_user %>
+  <ul class="account-menu">
+    <%= menu_link_to current_user.name + "さん", :account %>
+    <%= menu_link_to "ログアウト", :session, method: :delete, data: { confirm: "ログアウトしますか？" } %>
+  </ul>
+<% end %>
+
 <nav class="menubar">
   <ul>
     <%= menu_link_to "TOP", :root %>
     <%= menu_link_to "会員一覧", :users %>
+    <%= menu_link_to "商品一覧", :items %>
     <%= menu_link_to "管理ページ", "#" %>
   </ul>
 </nav>
