--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,6 +5,6 @@
 <div class="toolbar"><%= link_to "会員詳細に戻る", @user %></div>
 
 <%= form_for @user do |form| %>
-  <%= render "form", form: form %>
+  <%= render "shared/user_form", form: form %>
   <div><%= form.submit %></div>
 <% end %>
