2019/9/8 時点での最新

--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -5,6 +5,6 @@
 <div class="toolbar"><%= link_to "マイアカウントに戻る", :account %></div>
 
 <%= form_for @user, as: "account", url: :account do |form| %>
-  <%= render "shared/user_form", from: from %>
+  <%= render "shared/user_form", form: form %>
   <div><%= form.submit %></div>
 <% end %>
