--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,7 +3,10 @@
 <h1><%= @page_title %></h1>
 
 <div class="toolbar"><%= link_to "編集", [:edit, @item] %></div>
-
+<%= render "footer", item: @item %>
+<%= render "favorites" %>
+<%= the_first_image(@item) %>
+<%= other_images(@item) %>
 <table class="attr">
   <tr>
     <th><%= tm Item, :name %></th>
@@ -42,3 +45,19 @@
     <td><%= @item.status_text %></td>
   </tr>
 </table>
+<h3>コメント一覧</h3>
+<% @comments.each do |c| %>
+  <div>
+    <a href="/users/<%= @item.user.id %>"><%= c.user.name %></a>
+    <%= c.content %>
+    <hr>
+  </div>
+<% end %>
+
+<%= form_for [@item, @comment] do |f| %>
+  <%= f.text_field :content %>
+  <br>
+  <%= f.submit 'コメントする' %>
+<% end %>
+
+<%= link_to "ホームへ戻る", items_path %>
