--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,14 @@
         <%= render "shared/header" %>
       </header>
       <main>
-        <% if flash.notice %>
-          <p class="notice"><%= flash.notice %></p>
+        <% if flash[:notice] %>
+          <div class="alert alert-success">
+            <%= flash[:notice] %>
+          </div>
+        <% elsif flash[:alert] %>
+          <div class="alert alert-danger">
+            <%= flash[:alert] %>
+          </div>
         <% end %>
         
         <%= yield %>
