管理用コントローラーの調整＋管理フラグを一般ユーザーから見えないよう処理
レッスン時の調整＋一般ユーザーに管理フラグを見せないように

--- a/app/views/admin/top/index.html.erb
+++ b/app/views/admin/top/index.html.erb
@@ -1,7 +1,6 @@
 <% @page_title = "管理ページトップ" %>
 <ul>
-  <li><%= link_to "会員管理", :admin_users %></li>
-  <li><%= link_to "商品管理", :admin_items %></li>
+  <li><%= link_to "会員管理", :users %></li>
+  <li><%= link_to "商品管理", :items %></li>
   <li><%= link_to "注文管理", :admin_orders %></li>
-  <li><%= link_to "ポイント管理", :admin_points %></li>
 </ul>
