--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
 <% else %>
   <ul class="account-menu">
     <%= link_to "新規登録", :new_user %>
-    <%= link_to "ログイン", :login_form %>
+    <%= render "shared/login_form" %>
   </ul>
 <% end %>
 
