--- a/app/views/backup/users/edit.html.erb
+++ b/app/views/backup/users/edit.html.erb
@@ -2,9 +2,9 @@
 
 <h1><%= @page_title %></h1>
 
-<div class="toolbar"><%= link_to "会員詳細に戻る", [:admin, @user] %></div>
+<div class="toolbar"><%= link_to "会員詳細に戻る", @user %></div>
 
-<%= form_for [:admin, @user] do |form| %>
+<%= form_for @user do |form| %>
   <%= render "shared/user_form", form: form %>
   <div><%= form.submit %></div>
 <% end %>
