--- a/app/views/backup/users/new.html.erb
+++ b/app/views/backup/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= @page_title %></h1>
 
-<%= form_for [:admin, @user] do |form| %>
+<%= form_for @user do |form| %>
   <%= render "shared/user_form", form: form %>
   <div><%= form.submit %></div>
 <% end %>
