--- a/app/views/shared/_admin_menubar.html.erb
+++ b/app/views/shared/_admin_menubar.html.erb
@@ -1,10 +1,9 @@
 <nav class="menubar" id="admin-menubar">
   <ul>
     <%= menu_link_to "管理TOP", :admin_root %>
-    <%= menu_link_to "会員管理", :admin_users %>
-    <%= menu_link_to "商品管理", :admin_items %>
+    <%= menu_link_to "会員管理", :users %>
+    <%= menu_link_to "商品管理", :items %>
     <%= menu_link_to "注文管理", :admin_orders %>
-    <%= menu_link_to "ポイント管理", :admin_points %>
     <%= menu_link_to "TOP", :root %>
   </ul>
 </nav>
