2019/11/4 時点での最新

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,36 @@
  
  *= require_self
  */
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  background-color: #ddd;
+}
+
+.select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+  outline: none;
+  background: transparent;
+
+  font-size: 30px;
+  width: 104px;
+}
+
+.selectWrap {
+  position: relative;
+  &:after {
+    content: '▼';
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+    color: #666;
+    pointer-events: none;
+  }
+}
