--- a/app/views/errors/login_required.html.erb
+++ b/app/views/errors/login_required.html.erb
@@ -1,4 +1,2 @@
-<% @page_title = "ログインが必要です" %>
+<% @page_title = "このページを表示する権限がありません。" %>
 <h1><%= @page_title %></h1>
-
-<%= render "shared/login_form" %>
