--- a/app/views/users/_body.html.erb
+++ b/app/views/users/_body.html.erb
@@ -4,6 +4,8 @@
     <td>
       <% if @user.profile_picture.attached? %>
         <%= image_tag @user.profile_picture.variant(resize: "128x128") %>
+      <% else %>
+        <%= image_tag("default_user.png", :size => "128x128") %>
       <% end %>
     </td>
   </tr>
