マイページに出品及び購入した商品一覧のリンクを設置
マイページから飛べるようにするため

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -6,6 +6,8 @@
   <%= menu_link_to "アカウント情報の編集", :edit_account %>
   <%= menu_link_to "パスワードの変更", :edit_password %>
   <%= menu_link_to "商品を出品する", :new_item %>
+  <%= menu_link_to "出品した商品", providers_path(current_user.id) %>
+  <%= menu_link_to "購入した商品", consumers_path(current_user.id) %>
   <%= menu_link_to "お気に入り商品", favorited_user_path(current_user.id) %>
   <%= menu_link_to "ログアウト", :session, method: :delete, data: { confirm: "ログアウトしますか？" } %>
 </ul>
