--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @page_title %></h1>
 
 <div class="toolbar">
-  <%= link_to "ポイントの新規登録", :new_admin_user_point %>
+  <%= link_to "ポイントの新規登録", :new_user_point %>
 </div>
 
 <% if @points.present? %>
