--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -59,6 +59,10 @@
   <%= f.submit 'コメントする' %>
 <% end %>
 <%= render "footer", item: @item %>
-<%= render "order_button" %>
+<% if @item.order.blank? %>
+　<%= render "order_button" %>
+<% else %>
+  <h4>取引済み</h4>
+<% end %>　
 <%= render "favorites" %>
 <%= link_to "ホームへ戻る", items_path %>
