--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <% @items.each do |item| %>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 py-1 d-inline-flex flex-wrap">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 py-1 d-inline-flex flex-wrap position-relative">
           <%= link_to item, class: "text-dark", target:"_blank" do %>
             <div class="card" style="width: 200px;">
               <% if item.images.first&.data&.attached? %>
@@ -18,6 +18,13 @@
                 <p class="card-text"><%= item.name %></p>
               </div>
             </div>
+            <% if item.order.present? %>
+              <div class="items-box_photo__sold">
+                <div class="items-box_photo__sold__inner">
+                  SOLD
+                </div>
+              </div>
+            <% end %>
           <% end %>
         </div>
       <% end %>
