購入した商品一覧のレイアウト変更

--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -1,4 +1,4 @@
-<% @page_title = "受注履歴一覧" %>
+<% @page_title = "出品した商品の一覧" %>
 <h1><%= @page_title %></h1>
 <div class="container">
   <div class="row">
@@ -28,7 +28,7 @@
           </tbody>
         </table>
       <% else %>
-        <p>受注履歴がありません。</p>
+        <p>出品履歴がありません。</p>
       <% end %>
     </div>
     <div class="col-lg-9">
@@ -59,7 +59,7 @@
           </tbody>
         </table>
       <% else %>
-        <p>受注履歴がありません。</p>
+        <p>取引履歴がありません。</p>
       <% end %>
     </div>
   </div>
