--- a/app/views/consumers/index.html.erb
+++ b/app/views/consumers/index.html.erb
@@ -1,11 +1,12 @@
-<% @page_title = "注文履歴一覧" %>
+<% @page_title = "購入した商品の一覧" %>
 <h1><%= @page_title %></h1>
 
 <% if @orders.present? %>
-  <table class="list">
+  <table class="list w-100">
     <thead>
       <tr>
         <th>id</th>
+        <th>商品画像</th>
         <th>商品情報</th>
         <th>購入状態</th>
         <th>発注日時</th>
@@ -16,6 +17,13 @@
       <% @orders.each do |order| %>
         <tr>
           <td><%= link_to order.id, consumer_path(order.id) %></td>
+          <td>
+          　<% if order.item.images.first&.data&.attached? %>
+              <%= image_tag(order.item.images.first.data, :size => "70x70") %>
+            <% else %>
+              <%= image_tag("no_image.png", :size => "70x70") %>
+            <% end %>
+          </td>
           <td><%= link_to order.item.name, order.item %></td>
           <td><%= order.status_text %></td>
           <td><%= order.ordered_at&.strftime("%Y/%m/%d %H:%M") %></td>
